...
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:contentDescription="View list of deminders in map"
        android:text="@string/click_to_view_in_map"
        app:layout_constraintBottom_toBottomOf="@+id/fab_add_reminder"
        app:layout_constraintEnd_toStartOf="@id/fab_add_reminder" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
